# NexusPanel

./: .gitignore  README.md  main.py  pages.py  pyproject.toml  requirements.txt
core/: app.py  config.py  router.py  shared.py  state.py
modules/: rate_limiter.py  vless_ws.py  xhttp_transport.py
telegram/: bot.py
web/: pages.py
