[project]
name = "NexusPanel"
version = "1.0.0"
description = "NexusPanel — Persian web management panel"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.1",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
]

[project.scripts]
nexus = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"